--- a/index.html
+++ b/index.html
@@ -2,18 +2,58 @@
 
 <head>
 	<meta charset="utf-8">
+  <title>25.11. Studio: HTTP and Forms</title>
 	<script>
-		// TODO: create a handler
     window.addEventListener("load", function(){
-        // TODO: register the handler
+
+      let actions = {
+        "google": "https://www.google.com/search",
+        "duckduckgo": "https://duckduckgo.com/",
+        "bing": "https://www.bing.com/search",
+        "ask": "https://www.ask.com/web"
+      };      
+
+      let form = document.getElementById("searchForm");
+
+      function setSearchEngine() {
+        let selected = (document.querySelector("input[name=engine]:checked").value);
+        let webAddress = actions[selected];
+        for (let engine in actions) {
+          if (selected === engine) {
+            form.setAttribute("action", webAddress);
+          }
+        }
+      }
+
+      form.addEventListener("submit", setSearchEngine);
+
     });
 	</script>
 </head>
 
 <body>
 
-	<form id="searchForm">
-    <!-- TODO: add form elements -->
+	<form id="searchForm" target="_blank">
+    <label> 
+      <input type="text" name="q"/>
+    </label>   
+    <label>   
+      <input type="radio" name="engine" value="google"/>
+      Google
+    </label>
+    <label>   
+      <input type="radio" name="engine" value="duckduckgo"/>
+      DuckDuckGo
+    </label>
+    <label>   
+      <input type="radio" name="engine" value="bing"/>
+      Bing
+    </label>
+    <label>   
+      <input type="radio" name="engine" value="ask"/>
+      Ask
+    </label>    
+    <input type="submit" value="Go!"/>         
 	</form>
 
 </body>
